<resources>
    <string name="app_name">Wild_Animal_Detection_System</string>
    <string name="cancel">Cancel</string>
    <string name="marathi">Marathi</string>
    <string name="gujarati">Gujarati</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="hello_user_name">Welcome, User Name</string>
    <string name="my_profile">My Profile</string>
    <string name="language">Language</string>
    <string name="live_feed">Live Feed</string>
    <string name="customize_ncamera">Customize</string>
    <string name="contact_us">Contact Us</string>
    <string name="help">Help</string>
    <string name="welcome">"Welcome "</string>
    <string name="customize_camera">Customize Camera</string>
    <string name="data_updated">Data updated</string>
    <string name="no_changes_found">No Changes Found</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name :-</string>
    <string name="user_name">User Name</string>
    <string name="password">Password :-</string>
    <string name="user_password">User password</string>
    <string name="edit">Edit</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="please_verify_the_otp">please verify the OTP</string>
    <string name="user_does_not_exists_please_create_an_account">User does not exists, Please create an Account.</string>
    <string name="forgot_n_password">FORGOT   PASSWORD</string>
    <string name="provide_your_account_s_phone_no_for_which_you_nwant_to_reset_your_password">Provide your account\'s Phone no. for which you  want to reset your Password.</string>
    <string name="enter_phone_number">Enter Phone Number.</string>
    <string name="get_otp">Get OTP</string>
    <string name="help_1">Help</string>
    <string name="login_successfully">"Login Successfully "</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="hi_nplease_login">Hi,  Please Login</string>
    <string name="phone_no">Phone no.</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="password_1">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="create_account">Create Account</string>
    <string name="protecting_farms_nwith_spy_cam">Protecting Farms  with spy Cam</string>
    <string name="watch_and_protect_your_nfarm_with_our_app">Watch and protect your  farm with our App.</string>
    <string name="get_started">Get Started</string>
    <string name="user_name_1">User Name</string>
    <string name="password_2">Password :-</string>
    <string name="user_password_1">User password</string>
    <string name="phone_no_1">Phone No :-</string>
    <string name="password_reset_successfully">Password Reset Successfully.</string>
    <string name="minimum_6_character_required">Minimum 6 character required</string>
    <string name="confirm_password_and_new_password_should_be_same">Confirm Password and New Password should be same</string>
    <string name="new_n_credentials">NEW   CREDENTIALS</string>
    <string name="your_identity_has_been_verified_n_set_your_new_password">Your identity has been verified.   Set your new Password.</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="account_created_successfully">Account created Successfully</string>
    <string name="enter_only_alphabates">Enter only Alphabates</string>
    <string name="create_naccount">Create  Account</string>
    <string name="name_1">Name</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="phone_no_3">Phone no.</string>
    <string name="enter_your_phone_number_1">Enter your Phone Number</string>
    <string name="password_3">Password</string>
    <string name="enter_your_password_1">Enter your Password</string>
    <string name="create">Create</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="please_check_internet_connection">Please check Internet Connection.</string>
    <string name="please_enter_all_numbers">Please enter all numbers.</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="please_enter_the_otp_set_to_you">Please Enter the OTP set to you</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP</string>
    <string name="resend_otp_again">Resend OTP Again</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="edit_profile_1">Edit Profile</string>
    <string name="after_successfully_creating_account_go_to_customize_section">• After successfully Creating Account Go to Customize section.</string>
    <string name="then_add_the_camera_name_and_add_the_camera_s_ip">• Then give the Camera Name and Add the Camera\'s IP.</string>
    <string name="go_to_live_feed_section_in_home_menu">• Go to Live Feed Section in Home Menu.</string>
    <string name="in_live_feed_section_you_can_watch_live_feed_of_your_camera">• In Live Feed Section you can watch live feed of your Camera.</string>
    <string name="wait_for_animal_to_appear_on_camera_get_detection_and_get_alert">• Wait for animal to appear on camera, get detection and get Alert.</string>
    <string name="add_camera_information">Add Camera Information</string>
    <string name="give_the_camera_name">Give the Camera Name</string>
    <string name="paste_your_camera_link_here">Add your camera Link here</string>
</resources>