<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".ProfileActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="360dp"
                    android:background="@drawable/top_background_profile_page"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="135dp"
                    android:layout_height="137dp"
                    app:layout_constraintBottom_toBottomOf="@id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view"
                    app:layout_constraintVertical_bias="0.25"
                    app:srcCompat="@drawable/img" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_1"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView12"
                    app:layout_constraintStart_toStartOf="@+id/imageView12"
                    app:layout_constraintTop_toBottomOf="@+id/imageView12" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="145dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/white_background"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:elevation="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView6"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_goneMarginBottom="24dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/password_2"
                            android:textColor="#0F7015"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/user_password_1"
                            android:textAlignment="textEnd"
                            android:textColor="#5b5b5b"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <View
                        android:id="@+id/view1"
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="6dp"
                        android:background="#d9d9d9" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/phone_no_1"
                            android:textColor="#0F7015"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="7485967485"
                            android:textAlignment="textEnd"
                            android:textColor="#5b5b5b"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/edit_profile_1"
                android:textColor="#ffffff"
                android:textSize="22sp"
                android:textStyle="bold"
                android:background="@drawable/background_btn"
                style="@android:style/Widget.Button"
                android:layout_margin="24dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>